# challenge

./: CMakeLists.txt  config.ini  database.c  database.h  database.sqlite  main.cpp  print_thread.cpp  print_thread.h
test/: main.py
